--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Pig</title>
-    <link rel="stylesheet" href="./pig.css">
+    <link rel="stylesheet" href="pig.css">
 </head>
 <body>
     <div class="pig">
